--- a/Touchstone Brother IpP/Labels.xaml
+++ b/Touchstone Brother IpP/Labels.xaml
@@ -12,11 +12,12 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
+            <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#5D5D5D">
             <StackPanel Orientation="Horizontal">
-                <Button x:Name="ButtonRefresh" Width="40" Height="40" HorizontalAlignment="Left" Margin="17 0 0 0" BorderBrush="{x:Null}" Background="#00adff">
+                <Button x:Name="ButtonRefresh" Click="ButtonRefresh_Click" Width="40" Height="40" HorizontalAlignment="Left" Margin="17 0 0 0" BorderBrush="{x:Null}" Background="#00adff">
                     <materialDesign:PackIcon Kind="Refresh" HorizontalAlignment="Left" Width="25" Height="25" Margin="-10 0 -10 0"/>
                 </Button>
                 <Button x:Name="ButtonPrintAll" Width="130" Height="40" HorizontalAlignment="Left" Margin="25 0 0 0" BorderBrush="{x:Null}" Background="#00adff">
@@ -27,7 +28,15 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <ListView Grid.Row="1" Margin="10" Name="TestBinding" SelectedItem="{Binding SelectedLabel, Mode=TwoWay}" Height="508" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <Grid Grid.Row="1" Background="#ffcc00" >
+            <StackPanel   Orientation="Horizontal">
+                <Button VerticalAlignment="Center" Height="50" Margin="110 0 0 0" x:Name="ButtonSortID" Click="ButtonSort_Click" Content="ID" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
+                <Button VerticalAlignment="Center" Height="50" Margin="5 0 0 0" x:Name="ButtonSortName" Click="ButtonSort_Click" Width="110" Content="Name" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
+                <Button VerticalAlignment="Center" Height="50" Margin="15 0 0 0" x:Name="ButtonSortPostCode" Click="ButtonSort_Click" Width="170" Content="Postcode" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
+                <Button VerticalAlignment="Center" Height="50" Margin="190 0 0 0" x:Name="ButtonSortDeliveryDate" Click="ButtonSort_Click" Width="190" Content="Collection Date" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
+            </StackPanel>
+        </Grid>
+        <ListView Grid.Row="2" Margin="10" Name="TestBinding" SelectedItem="{Binding SelectedLabel, Mode=TwoWay}" Height="400" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Getvalue" Click="RMenuItem_Click"/>
@@ -91,9 +100,6 @@
                                 </WrapPanel>
                             </Grid>
                         </WrapPanel>
-                        <Grid>
-                            <Frame Height="80" Background="Black"/>
-                        </Grid>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
