--- a/Touchstone Brother IpP/MainWindow.xaml
+++ b/Touchstone Brother IpP/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Touchstone_Brother_IpP"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1080" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Foreground="White" FontFamily="Corbel">
+        Title="MainWindow" Height="600" Width="1080" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Foreground="White" FontFamily="Corbel" Loaded="MainWindow_Loaded">
 
     <Window.Resources>
         <Storyboard x:Key="MenuOpen">
@@ -50,6 +50,7 @@
 
 
 
+
     <Grid>
         <Grid >
             <Grid.ColumnDefinitions>
@@ -76,7 +77,7 @@
                         <ListViewItem Height="60" Name="Labels">
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="FileDocument" Width="25" Height="25" VerticalAlignment="Center"/>
-                                <TextBlock Text="Labels" VerticalAlignment="Center" Margin="20 10"/>
+                                <TextBlock Text="Local Labels" VerticalAlignment="Center" Margin="20 10"/>
                             </StackPanel>
                         </ListViewItem>
                         <ListViewItem Height="60" Name="Customers">
