Fixed some UI changes and issues with syncing Customer Labels and retrieving the labels

--- a/Touchstone Brother IpP/Home.xaml
+++ b/Touchstone Brother IpP/Home.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Touchstone_Brother_IpP"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Height="510" HorizontalAlignment="Left" Width="1010" Margin="35 0 0 0">
         <TextBlock Text="Welcome to Home. Click on of the tabs on the left to begin" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" TextWrapping="Wrap"/>
     </Grid>
 </UserControl>
