--- a/Touchstone Brother IpP/Customers.xaml
+++ b/Touchstone Brother IpP/Customers.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Touchstone_Brother_IpP"      
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="530" d:DesignWidth="924"
+      Width="1080" Height="510"
       Title="Customers">
 
     <Grid>
@@ -16,20 +16,24 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#5D5D5D">
-            <StackPanel Orientation="Horizontal">
-                <Button x:Name="ButtonRefresh" Click="ButtonRefresh_Click" Width="40" Height="40" HorizontalAlignment="Left" Margin="17 0 0 0" BorderBrush="{x:Null}" Background="#00adff">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button x:Name="ButtonRefresh" Click="ButtonRefresh_Click" Width="40" Height="40" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="#00adff">
                     <materialDesign:PackIcon Kind="Refresh" HorizontalAlignment="Left" Width="25" Height="25" Margin="-10 0 -10 0"/>
                 </Button>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1" Background="#ffcc00" >
-            <StackPanel   Orientation="Horizontal">
-                <Button VerticalAlignment="Center" Height="50" Margin="157
- 0 0 0" x:Name="ButtonSortName" Click="ButtonSort_Click" Width="110" Content="Name" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
+            <StackPanel Orientation="Horizontal">
+                <Button VerticalAlignment="Center" Height="50" Margin="157 0 0 0" x:Name="ButtonSortName" Click="ButtonSort_Click" Width="110" Content="Name" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
                 <Button VerticalAlignment="Center" Height="50" Margin="15 0 0 0" x:Name="ButtonSortPostCode" Click="ButtonSort_Click" Width="170" Content="Postcode" Foreground="Black" Background="#dbaf00" BorderBrush="{x:Null}"/>
             </StackPanel>
         </Grid>
-        <ListView Grid.Row="2" Margin="10" Name="CustomerListView" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" Height="400" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False">
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="540"/>
+                <ColumnDefinition Width="540"/>
+            </Grid.ColumnDefinitions>
+            <ListView Grid.Column="0" Margin="35 0 0 0" Width="1010" HorizontalAlignment="Left" Name="CustomerListView" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" Height="400" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -55,20 +59,39 @@
                                             <Run Text="Labels: "/>
                                             <Run Text="{Binding Path=AllLabels.Count, Mode=OneWay}" FontWeight="Bold"/>
                                             </TextBlock>
+                                            <ListView x:Name="LabelsListThing" ItemsSource="{Binding AllLabels}" HorizontalAlignment="Left" Width="800" ScrollViewer.CanContentScroll="False">
+                                                <ListView.ItemsPanel>
+                                                    <ItemsPanelTemplate>
+                                                        <StackPanel Orientation="Horizontal" Margin="-5"/>
+                                                    </ItemsPanelTemplate>
+                                                </ListView.ItemsPanel>
+                                                <ListView.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <Grid Width="Auto" Height="40">
+                                                            <Button Content="{Binding DeliveryDate}" Width="Auto" Height="35" Foreground="Black" Background="#0f000000" BorderBrush="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                        </Grid>
+                                                    </DataTemplate>
+                                                </ListView.ItemTemplate>
+                                            </ListView>
                                         </StackPanel>
                                     </Grid>
                                 </WrapPanel>
                             </Grid>
                         </WrapPanel>
+                        <Separator Foreground="Black" Width="1010" Opacity="0.5"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
-            <ListView.ItemContainerStyle>
+            <!--ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="IsHitTestVisible" Value="False"/>
                 </Style>
-            </ListView.ItemContainerStyle>
+            </-->
         </ListView>
+            <DockPanel Grid.Column="1" Background="#5D5D5D">
+                
+            </DockPanel>
+        </Grid>
     </Grid>
 </Page>
 
